# actix-web-dome

./: .env  .gitignore  Cargo.toml  sqlx-data.json
src/: main.rs
src/daos/: account_dao.rs  db_context.rs  mod.rs  share_user_dao.rs  user_share_dao.rs
src/handler/: group1.rs  inoutput.rs  mod.rs  mysql.rs  redis.rs
src/handlers/: client.rs  inoutput.rs  log.rs  mod.rs  mysql.rs  redis.rs  tpl.rs  upload.rs  ws.rs
src/middlewares/: mod.rs  user_check.rs
src/model/: account.rs  mod.rs
src/models/: account.rs  mod.rs
src/service/: account.rs  mod.rs
src/services/: account.rs
src/templates/: err.html
src/utils/: mod.rs  web_query.rs
tests/: t1.rs
