#cargo-features = ['named-profiles']
[package]
name = "untitled"
version = "0.1.0"
authors = ["liushan <shan.liu@msn.com>"]
edition = "2018"

#[profile.release]
#panic = "unwind"


[dependencies]
futures="0.3"
futures-util="0.3.8"
tokio = "*"
actix = "*"
actix-web = "3"
actix-files = "0.3"
actix-session = "0.4"
actix-multipart = "0.3"
actix-web-actors = "*"
pin-project = "0.4"
actix-redis = "0.9"
actix-utils = "2"
env_logger = "0.8"
derive_more="0.99.11"
redis-async = "0.6.3"
serde={ version = "1.0.118" }
serde_json="1.0.61"
sqlx = { version = "0.4.1", features = [ "mysql","runtime-tokio-native-tls"] }
dotenv = "0.15.0"
log = "0.4.8"
reqwest = { version = "0.11", features = ["json","stream"] }
async-stream = "*"

tracing = {version="0.1",features=["log-always"]}
tracing-log="*"
tracing-appender="*"
log = "*"
serde_urlencoded="0.7"
tracing-subscriber = "0.2.0"