#cargo-features = ['named-profiles']
[package]
name = "untitled"
version = "0.1.0"
authors = ["liushan <shan.liu@msn.com>"]
edition = "2018"

#[profile.release]
#panic = "unwind"


[dependencies]
pin-project = "0.4"
futures="0.3"
futures-util="0.3.8"
serde={ version = "1.0.118" }
serde_json="1.0.61"
dotenv = "0.15.0"

tokio = "*"
redis-async = "0.6.3"

actix="0.*"
actix-web = "3.3.*"
actix-files = "0.3"
actix-session = "0.4"
actix-multipart = "0.3"
actix-web-actors = "*"
actix-redis = "0.9"
actix-utils = "2"

#db
sqlx = { version = "0.4.1", features = [ "mysql","runtime-tokio-native-tls"] }

html-escape="*"

#客户端
reqwest = { version = "0.11", features = ["json","stream"] }
async-stream = "*"
log = "*" # 使用trace中宏 这里可以不要
serde_urlencoded="0.7"

#日志
tracing = {version="0.1",features=["log"]}# log-always 保持log的输出 当使用tracing时会出现两次

tracing-futures = { version = "*",features = ["futures-03"] }
tracing-attributes ="*" #日志属性宏
tracing-appender="*"#写日志文件
tracing-serde ="*"#可序列化变量赋值
tracing-subscriber = {version="0.2.0",features=["env-filter"]}

#模板
tera = "1.0"

#graylog 使用
#tracing-gelf = "0.4"
#tracing-log="*"